=== 1.0.0 / 2012-10-25

* BUG
  * Prepared statements that don't return results hung
