@@ -184,6 +184,9 @@ public class Result extends RubyObject {
         throw context.runtime.newIndexError("column " + column + " is out of range");
       }
       ByteBuffer buffer = columns[column];
+      if (buffer == null) {
+        return context.nil;
+      }
       byte[] bytes = buffer.array();
       return context.runtime.newString(new ByteList(bytes, buffer.arrayOffset() + buffer.position(), buffer.remaining()));
     }
